--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,7 @@ dependencies:
   pdf: ^3.1.0
   open_file: ^3.1.0
   path_provider: ^2.0.1
-  material_dropdown_formfield: ^latest_version_that_supports_null_safety
+  material_dropdown_formfield: ^0.2.0
   google_fonts: ^2.1.0
 
 dev_dependencies:
