--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,33 +23,33 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  animations: ^2.0.0
-  equatable: ^2.0.5
-  flutter_bloc: ^8.1.1
-  flutter_svg: ^0.21.0+1
-  http: ^0.13.1
-  image_cropper: ^2.0.0
-  image_picker: ^0.8.7
-  intl: ^0.17.0
-  json_annotation: ^4.8.1
-  photo_view: ^0.11.1
-  rxdart: ^0.26.0
-  shared_preferences: ^2.1.0
-  timeago: ^3.0.2
-  font_awesome_flutter: #lasted version
-  pdf: ^3.1.0
-  open_file: ^3.1.0
-  path_provider: ^2.0.1
-  google_fonts: ^2.1.0
+  animations: ^2.0.2
+  equatable: ^2.0.7
+  flutter_bloc: ^8.1.6
+  flutter_svg: ^0.23.0+1
+  http: ^0.13.3
+  image_cropper: ^1.5.1
+  image_picker: ^0.8.4+1
+  intl: ^0.18.1
+  json_annotation: ^4.0.1
+  photo_view: ^0.15.0
+  rxdart: ^0.28.0
+  shared_preferences: ^2.0.7
+  timeago: ^3.7.0
+  font_awesome_flutter: ^10.4.0 #lasted version
+  pdf: ^3.6.4
+  open_file: ^3.2.1
+  path_provider: ^2.0.4
+  google_fonts: ^2.3.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  build_resolvers: ^1.4.3
-  build_runner: ^1.10.0
-  flutter_launcher_icons: ^0.9.0
-  json_serializable: ^3.5.0
+  build_resolvers: ^2.0.4
+  build_runner: ^2.1.2
+  flutter_launcher_icons: ^0.9.3
+  json_serializable: ^4.1.4
   
 
 flutter_icons:
